<resources>
    <string name="app_name">Cloud Cards</string>

    <!-- Profile Activity -->
    <string name="edit_profile">Править</string>
    <string name="user_name">имя фамилия</string>

    <!-- Template Cards Fragment -->
    <string name="my_cards">Мои визитки</string>
    <string name="personal_card">Личная визитка</string>
    <string name="company_card">Визитка компании</string>

    <!-- Contacts Fragment -->
    <string name="search">Поиск...</string>
    <string name="sort">Сортировка</string>
    <string name="camera">Камера</string>
    <string name="people_tab">Люди</string>
    <string name="company_tab">Компании</string>
    <string name="scan_hint">Отсканируйте или импортируйте\nсвою первую визитку!</string>

    <!-- Card Fragment -->
    <string name="card">Визитка</string>

    <!-- Card List Item -->
    <string name="item_name">Название карты</string>

    <!-- Camera Activity -->
    <string name="point_camera">Наведите камеру на QR-код визитки</string>

    <!-- Template Card Activity -->
    <string name="rename">Переименовать</string>
    <string name="change_color">Изменить цвет</string>
    <string name="edit_card">Редактировать</string>

    <!-- QR Activity -->
    <string name="share">Поделиться</string>
    <string name="ok">ОК</string>

    <!-- Create Card Activity -->
    <string name="create_card">Создание визитки</string>
    <string name="card_name">Название визитки</string>
    <string name="qr_code">QR-код</string>
    <string name="export">Экспорт контакта</string>
    <string name="save">Сохранить</string>
    <string name="done">Готово</string>
    <string name="more">Просмотреть</string>
    <string name="delete">Удалить</string>

    <!-- Create Company Card Activity -->
    <string name="company_name">Наименование</string>
    <string name="responsible">Ответственное лицо</string>
    <string name="responsible_job_title">Должность ответственного лица</string>
    <string name="company_phone">Телефон</string>
    <string name="company_email">Электронная почта</string>

    <!-- Settings Activity -->
    <string name="name_is_empty">Имя не указано</string>
    <string name="mobile_is_empty">Мобильный номер не указан</string>
    <string name="email_is_empty">Email не указан</string>
    <string name="camera_permission">Доступ к камере</string>
    <string name="gallery_permission">Доступ к галерее</string>
    <string name="call_permission">Доступ к звонкам</string>
    <string name="contacts_permission">Доступ к контактам</string>
    <string name="attention">Внимание!</string>
    <string name="attention_message">Убрать доступ к функциям можно только в настройках самого телефона, в данном меню Вы можете только выдать доступ!\nИменно поэтому некоторые кнопки отключены!</string>
    <string name="privacy">Конфидециальность</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="help">Помощь</string>

    <!-- Edit Profile Activity -->
    <string name="edit_profile_title">Редактирование профиля</string>
    <string name="profile">Профиль</string>
    <string name="profile_is_empty">Профиль отсутствует</string>
    <string name="change">Изменить</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="patronymic">Отчество</string>
    <string name="company">Компания</string>
    <string name="jobTitle">Должность</string>
    <string name="mobile">Мобильный номер</string>
    <string name="mobileSecond">Мобильный номер (другой)</string>
    <string name="email">email</string>
    <string name="emailSecond">email (другой)</string>
    <string name="address">Адрес</string>
    <string name="addressSecond">Адрес (другой)</string>
    <string name="vk">VK</string>
    <string name="website">Сайт</string>
    <string name="facebook">Facebook</string>
    <string name="telegram">Telegram</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">Twitter</string>
    <string name="notes">Заметки</string>

    <!-- AboutApp Activity -->
    <string name="about">О приложении</string>
    <string name="alfa_bank_qr">Cloud Cards</string>
    <string name="version">Версия 1.0</string>
    <string name="about_text">Приложение для создания, редактирования и быстрого обмена электронными визитками, используя QR-код</string>
    <string name="year">2020 – 2021 год</string>

    <!-- Bottom Navigation Menu -->
    <string name="cards">Мои визитки</string>
    <string name="contacts">Контакты</string>
    <string name="settings">Настройки</string>
    <string name="title_activity_cards">Cards</string>

</resources>
