<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_cards">

    <fragment
        android:id="@+id/navigation_cards"
        android:name="com.example.cloud_cards.Fragments.TemplatesFragment"
        android:label="@string/cards"
        tools:layout="@layout/fragment_templates" />

    <fragment
        android:id="@+id/navigation_contacts"
        android:name="com.example.cloud_cards.Fragments.ContactsFragment"
        android:label="@string/contacts"
        tools:layout="@layout/fragment_contacts" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.cloud_cards.Fragments.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
</navigation>