<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".Activities.CreateCardActivity">

    <LinearLayout
        android:id="@+id/progressbar"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CC000000"
        android:gravity="center"
        android:translationZ="1dp">
        <ProgressBar
            android:layout_width="70dp"
            android:layout_height="70dp" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/back"
        android:layout_width="33dp"
        android:layout_height="33dp"
        app:srcCompat="@drawable/ic_back"
        android:tint="@color/colorTextPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="1dp"
        android:layout_marginTop="@dimen/app_margin_top_medium"
        android:layout_marginLeft="@dimen/app_left_margin"
        android:layout_marginStart="@dimen/app_left_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile_title"
        android:textColor="@color/colorTextPrimary"
        android:textStyle="bold"
        android:textSize="@dimen/app_text_size_title"
        app:layout_constraintTop_toTopOf="@id/back"
        app:layout_constraintBottom_toBottomOf="@id/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/save"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:srcCompat="@drawable/ic_accept"
        android:tint="@color/colorTextPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="1dp"
        android:layout_marginTop="@dimen/app_margin_top_medium"
        android:layout_marginRight="@dimen/app_right_margin"
        android:layout_marginEnd="@dimen/app_right_margin" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/app_margin_top_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back">
        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/change_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal">
                <ImageView
                    android:id="@+id/photo"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="@color/colorPrimary"
                    android:layout_gravity="center"/>
                <ImageView
                    android:visibility="gone"
                    android:id="@+id/qr"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change"
                    android:textColor="@color/colorTextPrimary"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/app_margin_top_small"
                    android:textSize="@dimen/app_text_size_medium"
                    />
            </LinearLayout>


            <EditText
                android:id="@+id/surname"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/app_left_margin"
                android:layout_marginStart="@dimen/app_left_margin"
                android:layout_marginRight="@dimen/app_right_margin"
                android:layout_marginEnd="@dimen/app_right_margin"
                android:layout_marginBottom="@dimen/app_margin_bottom_small"
                android:textColor="@color/colorTextPrimary"
                android:maxLines="1"
                android:hint="@string/surname"/>

            <EditText
                android:id="@+id/name"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/app_left_margin"
                android:layout_marginStart="@dimen/app_left_margin"
                android:layout_marginRight="@dimen/app_right_margin"
                android:layout_marginEnd="@dimen/app_right_margin"
                android:layout_marginBottom="@dimen/app_margin_bottom_small"
                android:textColor="@color/colorTextPrimary"
                android:maxLines="1"
                android:hint="@string/name"/>

            <EditText
                android:id="@+id/patronymic"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/app_left_margin"
                android:layout_marginStart="@dimen/app_left_margin"
                android:layout_marginRight="@dimen/app_right_margin"
                android:layout_marginEnd="@dimen/app_right_margin"
                android:layout_marginBottom="@dimen/app_margin_bottom_small"
                android:textColor="@color/colorTextPrimary"
                android:maxLines="1"
                android:hint="@string/patronymic"/>

            <androidx.appcompat.widget.AppCompatEditText
                app:drawableEndCompat="@drawable/ic_close"
                android:id="@+id/company"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/app_left_margin"
                android:layout_marginStart="@dimen/app_left_margin"
                android:layout_marginRight="@dimen/app_right_margin"
                android:layout_marginEnd="@dimen/app_right_margin"
                android:layout_marginBottom="@dimen/app_margin_bottom_small"
                android:textSize="@dimen/app_text_size_large"
                android:drawablePadding="5dp"
                android:textColor="@color/colorTextPrimary"
                android:maxLines="1"
                android:hint="@string/company" />

            <androidx.appcompat.widget.AppCompatEditText
                app:drawableEndCompat="@drawable/ic_close"
                android:id="@+id/job_title"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/app_left_margin"
                android:layout_marginStart="@dimen/app_left_margin"
                android:layout_marginRight="@dimen/app_right_margin"
                android:layout_marginEnd="@dimen/app_right_margin"
                android:layout_marginBottom="@dimen/app_margin_bottom_small"
                android:textSize="@dimen/app_text_size_large"
                android:drawablePadding="5dp"
                android:textColor="@color/colorTextPrimary"
                android:maxLines="1"
                android:hint="@string/jobTitle" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/app_left_margin"
                android:layout_marginStart="@dimen/app_left_margin"
                android:layout_marginRight="@dimen/app_right_margin"
                android:layout_marginEnd="@dimen/app_right_margin"
                android:layout_marginBottom="@dimen/app_margin_bottom_small"
                android:textSize="@dimen/app_text_size_large"
                android:drawablePadding="5dp"
                android:textColor="@color/colorTextPrimary"
                android:maxLines="1"
                android:inputType="phone"
                android:hint="@string/mobile" />

            <androidx.appcompat.widget.AppCompatEditText
                app:drawableEndCompat="@drawable/ic_close"
                android:id="@+id/mobile_second"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/app_left_margin"
                android:layout_marginStart="@dimen/app_left_margin"
                android:layout_marginRight="@dimen/app_right_margin"
                android:layout_marginEnd="@dimen/app_right_margin"
                android:layout_marginBottom="@dimen/app_margin_bottom_small"
                android:textSize="@dimen/app_text_size_large"
                android:drawablePadding="5dp"
                android:textColor="@color/colorTextPrimary"
                android:maxLines="1"
                android:inputType="phone"
                android:hint="@string/mobileSecond" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/app_left_margin"
                android:layout_marginStart="@dimen/app_left_margin"
                android:layout_marginRight="@dimen/app_right_margin"
                android:layout_marginEnd="@dimen/app_right_margin"
                android:layout_marginBottom="@dimen/app_margin_bottom_small"
                app:drawableStartCompat="@drawable/ic_email"
                android:drawablePadding="5dp"
                android:textColor="@color/colorTextPrimary"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:hint="@string/email" />

            <androidx.appcompat.widget.AppCompatEditText
                app:drawableEndCompat="@drawable/ic_close"
                android:id="@+id/email_second"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/app_left_margin"
                android:layout_marginStart="@dimen/app_left_margin"
                android:layout_marginRight="@dimen/app_right_margin"
                android:layout_marginEnd="@dimen/app_right_margin"
                android:layout_marginBottom="@dimen/app_margin_bottom_small"
                app:drawableStartCompat="@drawable/ic_email"
                android:drawablePadding="5dp"
                android:textColor="@color/colorTextPrimary"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:hint="@string/emailSecond" />

            <androidx.appcompat.widget.AppCompatEditText
                app:drawableEndCompat="@drawable/ic_close"
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/app_left_margin"
                android:layout_marginStart="@dimen/app_left_margin"
                android:layout_marginRight="@dimen/app_right_margin"
                android:layout_marginEnd="@dimen/app_right_margin"
                android:layout_marginBottom="@dimen/app_margin_bottom_small"
                android:textSize="@dimen/app_text_size_large"
                app:drawableStartCompat="@drawable/ic_location"
                android:drawablePadding="5dp"
                android:textColor="@color/colorTextPrimary"
                android:maxLines="1"
                android:hint="@string/address" />

            <androidx.appcompat.widget.AppCompatEditText
                app:drawableEndCompat="@drawable/ic_close"
                android:id="@+id/address_second"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/app_left_margin"
                android:layout_marginStart="@dimen/app_left_margin"
                android:layout_marginRight="@dimen/app_right_margin"
                android:layout_marginEnd="@dimen/app_right_margin"
                android:layout_marginBottom="@dimen/app_margin_bottom_small"
                android:textSize="@dimen/app_text_size_large"
                app:drawableStartCompat="@drawable/ic_location"
                android:drawablePadding="5dp"
                android:textColor="@color/colorTextPrimary"
                android:maxLines="1"
                android:hint="@string/addressSecond" />

            <androidx.appcompat.widget.AppCompatEditText
                app:drawableEndCompat="@drawable/ic_close"
                android:id="@+id/vk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/app_left_margin"
                android:layout_marginStart="@dimen/app_left_margin"
                android:layout_marginRight="@dimen/app_right_margin"
                android:layout_marginEnd="@dimen/app_right_margin"
                android:layout_marginBottom="@dimen/app_margin_bottom_small"
                android:textSize="@dimen/app_text_size_large"
                app:drawableStartCompat="@drawable/ic_vk"
                android:drawablePadding="5dp"
                android:textColor="@color/colorTextPrimary"
                android:maxLines="1"
                android:hint="@string/vk" />

            <androidx.appcompat.widget.AppCompatEditText
                app:drawableEndCompat="@drawable/ic_close"
                android:id="@+id/facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/app_left_margin"
                android:layout_marginStart="@dimen/app_left_margin"
                android:layout_marginRight="@dimen/app_right_margin"
                android:layout_marginEnd="@dimen/app_right_margin"
                android:layout_marginBottom="@dimen/app_margin_bottom_small"
                android:textSize="@dimen/app_text_size_large"
                app:drawableStartCompat="@drawable/ic_facebook"
                android:drawablePadding="5dp"
                android:textColor="@color/colorTextPrimary"
                android:maxLines="1"
                android:hint="@string/facebook" />

            <androidx.appcompat.widget.AppCompatEditText
                app:drawableEndCompat="@drawable/ic_close"
                android:id="@+id/instagram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/app_left_margin"
                android:layout_marginStart="@dimen/app_left_margin"
                android:layout_marginRight="@dimen/app_right_margin"
                android:layout_marginEnd="@dimen/app_right_margin"
                android:layout_marginBottom="@dimen/app_margin_bottom_small"
                android:textSize="@dimen/app_text_size_large"
                app:drawableStartCompat="@drawable/ic_instagram"
                android:drawablePadding="5dp"
                android:textColor="@color/colorTextPrimary"
                android:maxLines="1"
                android:hint="@string/instagram" />

            <androidx.appcompat.widget.AppCompatEditText
                app:drawableEndCompat="@drawable/ic_close"
                android:id="@+id/twitter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/app_left_margin"
                android:layout_marginStart="@dimen/app_left_margin"
                android:layout_marginRight="@dimen/app_right_margin"
                android:layout_marginEnd="@dimen/app_right_margin"
                android:layout_marginBottom="@dimen/app_margin_bottom_small"
                android:textSize="@dimen/app_text_size_large"
                app:drawableStartCompat="@drawable/ic_twitter"
                android:drawablePadding="5dp"
                android:textColor="@color/colorTextPrimary"
                android:maxLines="1"
                android:hint="@string/twitter" />

            <EditText
                android:id="@+id/notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/app_left_margin"
                android:layout_marginStart="@dimen/app_left_margin"
                android:layout_marginRight="@dimen/app_right_margin"
                android:layout_marginEnd="@dimen/app_right_margin"
                android:layout_marginBottom="@dimen/app_margin_bottom_medium"
                android:textColor="@color/colorTextPrimary"
                android:lines="3"
                android:hint="@string/notes"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>