<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="88dp"
    android:orientation="horizontal"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true">

    <TextView
        android:id="@+id/company_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/company_name"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textSize="@dimen/app_text_size_medium"
        android:textColor="@color/colorTextPrimary"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/company_address"
        />

    <TextView
        android:id="@+id/company_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:textSize="12sp"
        android:textColor="@color/colorSecondary"
        android:maxLines="1"
        android:ellipsize="end"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/company_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/company_email"/>

    <TextView
        android:id="@+id/company_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/company_email"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textSize="12sp"
        android:maxLines="1"
        android:ellipsize="end"
        android:textColor="@color/colorSecondary"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/company_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>