<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="88dp"
    android:orientation="horizontal"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/photo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@color/colorPrimary"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/letters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/photo"
        app:layout_constraintBottom_toBottomOf="@id/photo"
        app:layout_constraintStart_toStartOf="@id/photo"
        app:layout_constraintEnd_toEndOf="@id/photo"
        />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="20dp"
        android:textSize="@dimen/app_text_size_medium"
        android:textColor="@color/colorTextPrimary"
        app:layout_constraintTop_toTopOf="@id/photo"
        app:layout_constraintStart_toEndOf="@id/photo"
        />

    <TextView
        android:id="@+id/job_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/jobTitle"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:textSize="12sp"
        android:textColor="@color/colorSecondary"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintStart_toStartOf="@id/name"
        app:layout_constraintBottom_toTopOf="@id/company"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:textSize="12sp"
        android:textColor="@color/colorSecondary"
        app:layout_constraintStart_toStartOf="@id/name"
        app:layout_constraintBottom_toBottomOf="@id/photo"/>

</androidx.constraintlayout.widget.ConstraintLayout>