<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Activities.AboutAppActivity">

    <TextView
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:textStyle="bold"
        android:textSize="@dimen/app_text_size_title"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="@+id/back"
        app:layout_constraintBottom_toBottomOf="@+id/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/back"
        android:layout_width="33dp"
        android:layout_height="33dp"
        app:srcCompat="@drawable/ic_back"
        android:tint="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="1dp"
        android:layout_marginTop="@dimen/app_margin_top_medium"
        android:layout_marginLeft="@dimen/app_left_margin"
        android:layout_marginStart="@dimen/app_left_margin" />

    <ImageView
        android:id="@+id/qr_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:tint="@android:color/white"
        android:layout_marginLeft="@dimen/app_left_margin"
        android:layout_marginStart="@dimen/app_left_margin"
        android:layout_marginTop="@dimen/app_margin_top_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back"
        app:srcCompat="@drawable/ic_qr"
        app:layout_constraintEnd_toStartOf="@+id/alfa_bank_qr" />

    <ImageView
        android:id="@+id/main_logo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:tint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/qr_logo"
        app:layout_constraintEnd_toEndOf="@+id/qr_logo"
        app:layout_constraintStart_toStartOf="@+id/qr_logo"
        app:layout_constraintTop_toTopOf="@+id/qr_logo"
        app:srcCompat="@drawable/ic_logo" />

    <TextView
        android:id="@+id/alfa_bank_qr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alfa_bank_qr"
        android:textColor="@android:color/white"
        android:textSize="@dimen/app_text_size_title"
        android:layout_marginBottom="40dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/qr_logo"
        app:layout_constraintTop_toTopOf="@+id/qr_logo"
        app:layout_constraintStart_toEndOf="@+id/qr_logo"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:textColor="@android:color/white"
        android:textSize="@dimen/app_text_size_large"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/qr_logo"
        app:layout_constraintTop_toTopOf="@+id/qr_logo"
        app:layout_constraintStart_toStartOf="@+id/alfa_bank_qr" />

    <TextView
        android:id="@+id/about_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_text"
        android:textColor="@android:color/white"
        android:textSize="@dimen/app_text_size_large"
        android:layout_marginLeft="@dimen/app_left_margin"
        android:layout_marginRight="@dimen/app_right_margin"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qr_logo"
        app:layout_constraintBottom_toTopOf="@+id/alfa_bank_ekb" />

    <TextView
        android:id="@+id/alfa_bank_ekb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alfa_bank_ekb"
        android:textColor="@android:color/white"
        android:textSize="@dimen/app_text_size_large"
        android:layout_marginLeft="@dimen/app_left_margin"
        android:layout_marginRight="@dimen/app_right_margin"
        android:layout_marginBottom="@dimen/app_margin_bottom_small"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/year" />

    <TextView
        android:id="@+id/year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/year"
        android:textColor="@android:color/white"
        android:textSize="@dimen/app_text_size_large"
        android:layout_marginLeft="@dimen/app_left_margin"
        android:layout_marginRight="@dimen/app_right_margin"
        android:layout_marginBottom="@dimen/app_margin_bottom_medium"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>